Fixed some issues of navbar + added a link to our home on the logo, last issue remaining: logo on mobile position

--- a/_header.css
+++ b/_header.css
@@ -79,6 +79,7 @@ header nav ul li a:hover {
     position: static;
     align-self: flex-end;
     width: 100%;
+    border-top: none;
   }
 
   header nav ul {
